# rgaussian16

./: Cargo.toml  LICENSE  README.md
src/: error.rs  gaussian.rs  lib.rs  validate.rs
