[package]
name = "rgaussian16"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/JurassicBunny/rgaussian16"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
discription = "Interface for the Gaussian16 quantum chemical package. This structure provides functions for auto generating input, and running the external program g16."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serde_test   = { version = "1.0.117" }

[dependencies]
serde        = { version = "1.0.130", features = ["derive"] }
serde_yaml   = { version = "0.8.21"                         }
regex 	     = { version = "1.5.4" 					        }
cmd_lib      = { version = "1.1.0" 							}
